{
    "name": "GameInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "da68bb60-6bb3-4236-b276-9c0a39033ee4",
            "actions": [
                {
                    "name": "PrimaryDown",
                    "type": "PassThrough",
                    "id": "1e62579f-c888-42d5-b04d-05f7da026c23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "eb19dc07-aafa-4ad1-b6c5-6e0a046edab6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "9d7431b7-e62e-4b5c-a5f7-0ed3b709a252",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16f844eb-b074-48a8-b21f-0ae87fcf9c2e",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5eed3e10-24c3-4ef1-99e0-8a748d473da1",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee8ef761-0b38-4a17-8ec5-e17e61273d99",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}